Getting rid of Serializable where is possible